; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_removexattr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_removexattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileglob = type { i64 }
%struct.vnode = type { i32 }

@DTYPE_VNODE = common dso_local global i64 0, align 8
@EFTYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_file_removexattr(%struct.fileglob* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fileglob*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.vnode*, align 8
  store %struct.fileglob* %0, %struct.fileglob** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.vnode* null, %struct.vnode** %6, align 8
  %7 = load %struct.fileglob*, %struct.fileglob** %4, align 8
  %8 = icmp ne %struct.fileglob* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.fileglob*, %struct.fileglob** %4, align 8
  %11 = call i64 @FILEGLOB_DTYPE(%struct.fileglob* %10)
  %12 = load i64, i64* @DTYPE_VNODE, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %9, %2
  %15 = load i32, i32* @EFTYPE, align 4
  store i32 %15, i32* %3, align 4
  br label %24

16:                                               ; preds = %9
  %17 = load %struct.fileglob*, %struct.fileglob** %4, align 8
  %18 = getelementptr inbounds %struct.fileglob, %struct.fileglob* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = inttoptr i64 %19 to %struct.vnode*
  store %struct.vnode* %20, %struct.vnode** %6, align 8
  %21 = load %struct.vnode*, %struct.vnode** %6, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @mac_vnop_removexattr(%struct.vnode* %21, i8* %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %16, %14
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @FILEGLOB_DTYPE(%struct.fileglob*) #1

declare dso_local i32 @mac_vnop_removexattr(%struct.vnode*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
